# AlmaTask

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
Docs/: API.md  DESIGN.md  SETUP.md
app/: auth.py  config.py  database.py  email_service.py  main.py  models.py  schemas.py
